# tec-mlops-project

./: Makefile  Pipfile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/processed/: .gitignore  bike_cleaned.csv  x_test.csv  x_train.csv  y_pred.csv  y_test.csv  y_train.csv
data/raw/: .gitignore  bike.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
modeling_pipeline/: config.env  docker-compose-existing-minio.yml  docker-compose.yaml  mlflow_test.py  test.ipynb
modeling_pipeline/db_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
modeling_pipeline/db_data/base/16384/: 1247  1249  1259  16385  16386  16392  16393  16395  16412  16416  16417  16446  16449  16457  16463  16464  16485  16486  16493  16500  16504  16505  16511  16512  16524  16534  16537  16543  16554  16562  16563  16569  16570  16581  16593  16594  16601  16614  2224  2579  (+30 more)
modeling_pipeline/db_data/base/4/: 2619
modeling_pipeline/db_data/base/5/: pg_internal.init
modeling_pipeline/db_data/global/: 1260  pg_control  pg_internal.init
modeling_pipeline/db_data/pg_stat/: pgstat.stat
modeling_pipeline/minio_data/.minio.sys/: format.json
modeling_pipeline/mlflow/: Dockerfile
models/: model.joblib
notebooks/: bike_sharing.ipynb
src/: loader.py
src/report/: explore.py
src/stages/: data_clean.py  data_load.py  preprocess.py  split.py  train.py
src/utils/: dataExplorer.py  utils.py
tec_mlops_project/: bikeSharingModel.py  dataExplorer.py  loader.py  main.py  preprocessData.py  utils.py
tec_mlops_project/mlruns/0/: meta.yaml
(+8 files in other folders)
